# pkg/api/handler/admin.go
@@ -2,6 +2,7 @@ package handler
 
 import (
 	"CrocsClub/pkg/helper"
+	interfaces "CrocsClub/pkg/helper/interface"
 	services "CrocsClub/pkg/usecase/interfaces"
 	"CrocsClub/pkg/utils/models"
 	"CrocsClub/pkg/utils/response"
@@ -18,11 +19,13 @@ import (
 
 type AdminHandler struct {
 	adminUseCase services.AdminUseCase
+	helper       interfaces.Helper
 }
 
-func NewAdminHandler(usecase services.AdminUseCase) *AdminHandler {
+func NewAdminHandler(usecase services.AdminUseCase, helper interfaces.Helper) *AdminHandler {
 	return &AdminHandler{
 		adminUseCase: usecase,
+		helper:       helper,
 	}
 }
 
@@ -353,4 +356,117 @@ func (ad *AdminHandler) SalesReportByDate(c *gin.Context) {
 
 	success := response.ClientResponse(http.StatusOK, "sales report retrieved successfully", report, nil)
 	c.JSON(http.StatusOK, success)
+}
+
+// SalesByDate gets sales details for a specific date and allows downloading the report in PDF or Excel format.
+//
+// @Summary Get sales details by date
+// @Description Get sales details for a specific date and download the report in PDF or Excel format
+// @Tags Admin Sales
+// @security BearerTokenAuth
+// @Param year query integer true "Year for sales data"
+// @Param month query integer true "Month for sales data"
+// @Param day query integer true "Day for sales data"
+// @Param download query string false "Download format (pdf or excel)"
+// @Success 200 {object} response.Response "Successfully retrieved sales details"
+// @Failure 400 {object} response.Response "Invalid request or incorrect format"
+// @Failure 502 {object} response.Response "Bad Gateway"
+// @Router /admin/salesbydate [get]
+func (a *AdminHandler) SalesByDate(c *gin.Context) {
+	year := c.Query("year")
+	yearInt, err := strconv.Atoi(year)
+
+	if err != nil {
+		errRes := response.ClientResponse(http.StatusBadRequest, "error in getting year", nil, err.Error())
+		c.JSON(http.StatusBadRequest, errRes)
+		return
+	}
+
+	month := c.Query("month")
+	monthInt, err := strconv.Atoi(month)
+
+	if err != nil {
+		errRes := response.ClientResponse(http.StatusBadRequest, "error in getting month", nil, err.Error())
+		c.JSON(http.StatusBadRequest, errRes)
+		return
+	}
+
+	day := c.Query("day")
+	dayInt, err := strconv.Atoi(day)
+
+	if err != nil {
+		errRes := response.ClientResponse(http.StatusBadRequest, "error in getting day", nil, err.Error())
+		c.JSON(http.StatusBadRequest, errRes)
+		return
+	}
+
+	body, err := a.adminUseCase.SalesByDate(dayInt, monthInt, yearInt)
+
+	fmt.Println("body handler", dayInt)
+	fmt.Println("body handler", monthInt)
+	fmt.Println("body handler", yearInt)
+
+	fmt.Println("body ", body)
+
+	if err != nil {
+		errRes := response.ClientResponse(http.StatusBadRequest, "error in getting sales details", nil, err.Error())
+		c.JSON(http.StatusBadRequest, errRes)
+		return
+	}
+
+	download := c.Query("download")
+	if download == "pdf" {
+		pdf, err := a.adminUseCase.PrintSalesReport(body)
+		if err != nil {
+			errRes := response.ClientResponse(http.StatusBadGateway, "error in printing sales report", nil, err)
+			c.JSON(http.StatusBadRequest, errRes)
+			return
+		}
+		c.Header("Content-Disposition", "attachment;filename=totalsalesreport.pdf")
+
+		pdfFilePath := "salesReport/totalsalesreport.pdf"
+
+		err = pdf.OutputFileAndClose(pdfFilePath)
+		if err != nil {
+			errRes := response.ClientResponse(http.StatusBadGateway, "error in printing sales report", nil, err)
+			c.JSON(http.StatusBadRequest, errRes)
+			return
+		}
+
+		c.Header("Content-Disposition", "attachment; filename=total_sales_report.pdf")
+		c.Header("Content-Type", "application/pdf")
+
+		c.File(pdfFilePath)
+
+		c.Header("Content-Type", "application/pdf")
+
+		err = pdf.Output(c.Writer)
+		if err != nil {
+			errRes := response.ClientResponse(http.StatusBadGateway, "error in printing sales report", nil, err)
+			c.JSON(http.StatusBadRequest, errRes)
+			return
+		}
+	} else {
+		fmt.Println("body ", body)
+		excel, err := a.helper.ConvertToExel(body)
+		if err != nil {
+			errRes := response.ClientResponse(http.StatusBadGateway, "error in printing sales report", nil, err)
+			c.JSON(http.StatusBadRequest, errRes)
+			return
+		}
+
+		fileName := "sales_report.xlsx"
+
+		c.Header("Content-Disposition", "attachment; filename="+fileName)
+		c.Header("Content-Type", "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet")
+
+		if err := excel.Write(c.Writer); err != nil {
+			errRes := response.ClientResponse(http.StatusBadGateway, "Error in serving the sales report", nil, err)
+			c.JSON(http.StatusBadRequest, errRes)
+			return
+		}
+	}
+
+	succesRes := response.ClientResponse(http.StatusOK, "success", body, nil)
+	c.JSON(http.StatusOK, succesRes)
 }
